Add front end for react

--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
     
   </div>
 
-  <!-- <script src='app.js'></script> -->
+  <script type="text/javascript" src="./dist/src/data/data.js"></script>
+  <script type="text/javascript" src="./dist/src/components/shopList.js"></script>
+  <script type="text/javascript" src="./dist/src/components/shopsEntry.js"></script> <script type="text/javascript" src="./dist/src/components/index.js"></script>
+  
+
 </body>
 
 </html>
-
