Revert to earlier version because of a bug in rendering

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css" />
 
     <script src="data.js"></script>
-    <script src="controller.js"></script>
+    <script src="ShopsController.js"></script>
 
   </head>
 
